# the-derple-dex

./: .gitignore  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  tmp_issue4.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
apature/sentence_bd/: METRICS.md  RUNBOOK.md  SPEC.md  package_output.sh  sbd_batch_plan_v1.md
apature/sentence_bd/book_sbd/: pyproject.toml
apature/sentence_bd/book_sbd/src/book_sbd/: __init__.py  canonicalize.py  cli.py  eval.py  export.py  invariants.py  numbering.py  pipeline.py
apature/sentence_bd/book_sbd/src/book_sbd/ingest/: boilerplate.py  epub_parser.py  structure.py
apature/sentence_bd/book_sbd/src/book_sbd/segment/: base.py  patch_rules.py  punkt_backend.py  text_modes.py
apature/sentence_bd/book_sbd/tests/integration/: test_batch_19_books.py  test_feedback_alice_v110.py  test_pipeline_snapshots.py
apature/sentence_bd/book_sbd/tests/unit/: test_boilerplate.py  test_canonicalize.py  test_ingest_structure.py  test_invariants.py  test_patch_rules.py  test_v110_contract.py
config/sources/: financial.yaml  sources.yaml
data/: index.json
data/raw/: bls_cpi.parquet  bls_employment.parquet  bls_jolts.parquet  bls_ppi.parquet  bls_wages.parquet  bond_etfs.parquet  commodities.parquet  currencies.parquet  economics_news.parquet  fed_news.parquet  fred_gdp.parquet  (+17 more)
scripts/: README.md  cdata_bridge.py.old  dataset_config.py.old  prepare-data-v2.py  prepare-data-v3.py  prepare-data.py  prepare-data.py.old
sources/: _example.py
src/: azure-ollama-gpu.txt  consts.ts  content.config.ts
(+34 files in other folders)
