[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-sbd"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.8",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
book-sbd = "book_sbd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
